# ccusage

./: .envrc  .gitignore  .lefthook.yml  .mcp.json  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  OMNI_PLAN.md  PR_SUBMISSION_MESSAGE.md  README.md  TODO.md  better-ccusage.example.json  build.zig  bump.config.ts  ccusage.example.json  config-schema.json  config.test.ts  config.ts  currency.test.ts  currency.ts  default.nix  eslint.config.js  flake.nix  install.ps1  install.sh  justfile  lefthook.yml  model_prices_and_context_window.json  oxfmt.config.ts  package.json  package.nix  plan.md  pnpm-lock.yaml  (+13 more)
crates/ccusage/: Cargo.toml  build.rs
crates/ccusage/src/: blocks.rs  claude_loader.rs  cli.rs  codex_loader.rs  config.rs  home.rs  main.rs  output.rs  pricing.rs  project_names.rs  table.rs  terminal.rs
crates/ccusage/src/adapter/: all.rs  amp.rs  codex.rs  mod.rs  opencode.rs  pi.rs
crates/ccusage/src/commands/: mod.rs
rust/crates/ccusage/: Cargo.toml  build.rs
rust/crates/ccusage/src/: blocks.rs  claude-pricing.json  claude_loader.rs  cli-help.json  cli.rs  codex_loader.rs  config.rs  config_schema.rs  cost.rs  date_utils.rs  fast-multiplier-overrides.json  fast.rs  home.rs  litellm-pricing-fallback.json  logger.rs  main.rs  model_aliases.rs  models-dev-pricing.json  output.rs  pricing.rs  progress.rs  project_names.rs  summary.rs  types.rs  utils.rs
rust/crates/ccusage/src/adapter/: AGENTS.md  README.md  all.rs  amp.rs  antigravity.rs  codebuff.rs  codex.rs  copilot.rs  droid.rs  gemini.rs  goose.rs  hermes.rs  kilo.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs
rust/crates/ccusage/src/adapter/all/: loader.rs  mod.rs  report.rs  tests.rs  types.rs
rust/crates/ccusage/src/adapter/amp/: README.md  loader.rs  (+4 more)
rust/crates/ccusage/src/commands/: mod.rs
rust/crates/ccusage/src/snapshots/: ccusage__cli__tests__claude_agent_help.snap  ccusage__cli__tests__codex_daily_help.snap  ccusage__cli__tests__statusline_help.snap  ccusage__config_schema__tests__snapshots_schema_agent_specific_option_edges.snap  ccusage__output__tests__snapshots_group_project_output_orders_named_projects_and_unknown_bucket.snap  ccusage__output__tests__snapshots_model_multiline_formatting_sorts_dedupes_and_shortens_names.snap  ccusage__output__tests__snapshots_session_summary_json_with_present_and_missing_options.snap  ccusage__output__tests__snapshots_summary_json_with_optional_fields_and_model_breakdowns.snap  ccusage__output__tests__snapshots_totals_json_with_extra_tokens_credits_and_zero_credit_omission.snap  ccusage__summary__tests__snapshots_bucket_aggregation_for_week_boundaries_invalid_dates_and_model_merging.snap  ccusage__summary__tests__snapshots_filter_and_sort_summaries_since_until_inclusive.snap  ccusage__summary__tests__snapshots_session_accumulator_latest_metadata_versions_and_timezone.snap  ccusage__summary__tests__snapshots_summarize_by_key_aggregates_counts_costs_and_breakdowns.snap
(+1060 files in other folders)
