[package]
name = "ccusage"
version = "18.0.11"
edition = "2021"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", default-features = false, features = [
	"derive",
	"env",
	"help",
	"std",
	"usage",
] }
jiff = { version = "0.2.24", default-features = false, features = [
	"std",
	"tz-system",
	"tzdb-zoneinfo",
] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
