[package]
name = "ccusage"
version = "18.0.11"
edition = "2021"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[dependencies]
jiff = { version = "0.2.24", default-features = false, features = [
	"std",
	"tz-system",
	"tzdb-zoneinfo",
] }
minreq = { version = "3.0.0-rc.1", default-features = false, features = ["https-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = { version = "0.37.0", default-features = false, features = ["bundled", "linkage"] }
