[package]
name = "ccusage"
version = "19.0.3"
edition = "2021"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[dependencies]
ccusage-terminal = { path = "../ccusage-terminal" }
jiff = { version = "0.2.24", default-features = false, features = [
	"std",
	"tz-system",
	"tzdb-zoneinfo",
] }
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = { version = "0.37.0", default-features = false, features = ["bundled", "linkage"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
minreq = { version = "3.0.0-rc.1", default-features = false, features = ["https-rustls"] }

[target.'cfg(not(all(target_os = "linux", target_env = "musl")))'.dependencies]
minreq = { version = "3.0.0-rc.1", default-features = false, features = ["https-native-tls"] }
